# aci

./: .aciignore  .gitignore  .pre-commit-config.yaml  ACI_SHELF_CLASSIFICATION.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOMAIN_PACK_EXTENSION_GUIDE.md  NON_GOALS.md  PRIVATE_HOST_BOOTSTRAP_RUNBOOK.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RUNTIME_ASSUMPTIONS.md  README.md  REPO_EXPORT_CHECKLIST.md  REPO_EXPORT_GUIDE.md  SECURITY.md  SUPPORT.md  aci.example-operations.toml  aci.example.toml  aci.self-scan-operations.toml  pyproject.toml  requirements-dev-analyzers.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-scanning.yml
archive/: CONTRIBUTING_DRAFT.md  SECURITY_DRAFT.md  session-handoff-2026-06-09.md  session-handoff-2026-06-11.md
archive/2026-06-redundant-core-mappings/: README.md  core-examples-README.md  core-python-README.md
archive/design/: aci-analyzer-execution-readiness-design.md  aci-analyzer-integration-readiness-design.md  aci-baseline-suppression-and-waiver-readiness-design.md  aci-built-wheel-install-proof-design.md  aci-ci-and-automation-contract-readiness-design.md  aci-ci27-patchwork-structure-design.md  aci-cli-and-config-readiness-design.md  aci-compatibility-surface-design.md  aci-domain-pack-boundary-design.md  aci-downstream-adoption-readiness-design.md  aci-editable-install-proof-design.md  aci-generic-hardening-design.md  aci-independence-basic-design.md  aci-installed-package-verification-design.md  aci-market-grade-readiness-design.md  aci-mirror-governance-design.md  aci-package-layout-migration-design.md  aci-packaging-readiness-design.md  aci-persistence-bridge-clarity-design.md  aci-pier-decoupling-implementation-design.md  aci-post-release-maintenance-cadence-design.md  aci-post-release-review-packet-design.md  aci-pre-public-polish-design.md  aci-private-host-bootstrap-design.md  aci-private-release-prep-design.md  aci-profile-execution-readiness-design.md  aci-public-adoption-readiness-design.md  aci-public-release-readiness-design.md  aci-public-surface-polish-design.md  aci-publication-gate-design.md  aci-publishable-hold-design.md  aci-registry-artifact-checklist-design.md  aci-registry-publishing-discipline-design.md  aci-registry-upload-dry-run-proof-design.md  aci-registry-upload-runbook-design.md  aci-release-candidate-packet-design.md  aci-release-discipline-readiness-design.md  aci-release-evidence-snapshot-design.md  aci-release-execution-handoff-packet-design.md  aci-release-go-no-go-log-design.md  (+11 more)
archive/docs-release/: CHANGELOG_DISCIPLINE.md  PACKAGE_LAYOUT_TARGET.md  PACKAGING_BLOCKERS.md  PACKAGING_READINESS_CONTRACT.md  POST_RELEASE_MAINTENANCE_CADENCE.md  POST_RELEASE_REVIEW_PACKET.md  PRE_PUBLICATION_DECISIONS.md  PRE_PUBLIC_READINESS_SNAPSHOT_20260606.md  (+21 more)
common/: COMMON_SESSION_HANDOFF_20260611.md  README.md
core/: README.md  aci-autonomous-code-inspection-tool-contract.md  aci-code-inspection-execution-spec.md
docs/: ACI_DOWNSTREAM_ADOPTION_PACKET.md  ACI_EVIDENCE.md  ACI_GENERAL_PURPOSE_COMPLETION_PLAN.md  ACI_SHELF_CLASSIFICATION.md  AI_AGENT_RUNTIME_TOKEN_OPTIMIZATION.md  AUDIT_2026-06-19_GENERAL_PURPOSE_READINESS.md  AUDIT_2026-06-19_REMEDIATION_PLAN.md  CI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTOR_WORKFLOW.md  DOMAIN_PACK_EXTENSION_GUIDE.md  MAINTAINER_SCAN_MODE_RUNBOOK.md  NON_GOALS.md  NON_RUNTIME_TRIAGE_WORKFLOW.md  PRECISION_REVIEW_WORKFLOW.md  PUBLIC_RUNTIME_ASSUMPTIONS.md  QUICKSTART.md  USER_EVALUATION_INDEX.md  VERSIONING_POLICY.md  design_base_registry.yaml  design_gate_r_log.yaml  design_residuals.yaml  design_seam_review.yaml
domains/: README.md
persistence/: README.md  aci-pier-validation-decision-register.md
python/: aci_domain_contract.py  aci_domain_loader.py  aci_findings.py  aci_profiles.py  aci_public_smoke.py  aci_signals.py  aci_wording.py  aci_working_mirror_sync.py
report/: README.md  aci-generic-report-contract.md  aci-machine-readable-report-contract.md
runtime/: README.md  aci-generic-quickstart.md
shared/: __init__.py
(+510 files in other folders)
