[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aci"
version = "0.1.0"
description = "Autonomous Code Inspection common shelf"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "fumimaruwork" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[project.scripts]
aci = "aci.aci_cli:main"

[tool.setuptools]
packages = ["aci"]
include-package-data = true

[tool.setuptools.package-dir]
aci = "shared/python"

[tool.setuptools.package-data]
aci = [
  "package_assets/fixtures/*.json",
  "package_assets/report/examples/*.md",
  "package_assets/report/examples/*.json"
]

[tool.pytest.ini_options]
testpaths = ["shared/tests"]
