[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-inspector"
version = "0.1.4"
description = "Auto Code Inspector: Python-first code audit and structure inspection"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "maruwork" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
# CI continuously verifies Ubuntu, Windows, and macOS. Linux keeps the wider
# Python-version matrix; Windows/macOS run the bounded platform-verification lane.

[project.scripts]
aci = "aci.aci_cli:main"

[tool.setuptools]
packages = [
  "aci",
  "aci.detectors",
  "aci.package_assets",
  "aci.package_assets.analyzers",
  "aci.package_assets.fixtures",
  "aci.package_assets.report",
  "aci.package_assets.report.examples"
]
include-package-data = true

[tool.setuptools.package-dir]
aci = "shared/python"

[tool.setuptools.package-data]
aci = [
  "package_assets/analyzers/*.yml",
  "package_assets/fixtures/*.json",
  "package_assets/report/examples/*.md",
  "package_assets/report/examples/*.json"
]

[tool.mypy]
# The package uses an intentional try/except ImportError dual-import idiom so
# modules work both as an installed package and as direct scripts. mypy reports
# every dual import as [no-redef]; that is by design, so the code is disabled.
# All other type errors are gating (see .github/workflows/ci.yml).
ignore_missing_imports = true
disable_error_code = ["no-redef"]

[tool.pytest.ini_options]
testpaths = ["shared/tests"]
